# Autonomous-ML-Agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  IMPROVEMENTS_SUMMARY.md  LICENSE  Makefile  README.md  RUN_PROJECT.md  WEB_INTERFACE_README.md  env.example  experiences.db  pyproject.toml  requirements.txt  simple_demo.py  start_web_interface.bat  start_web_interface.py  start_web_interface.sh
autonomous_ml/: __init__.py  cli.py  config.py  core.py  data_pipeline.py  experience_memory.py  llm_client.py  plan_executor.py  strategic_orchestrator.py  web_api.py  web_dashboard.py
chroma_db/: chroma.sqlite3
examples/: advanced_usage.py  basic_usage.py
examples/datasets/: generate_all_datasets.py  housing.csv  housing_dataset.py  iris.csv  iris_dataset.py  titanic.csv  titanic_dataset.py
results/: results_20250901_173435.json
tests/: __init__.py  test_core.py  test_data_pipeline.py  test_experience_memory.py  test_integration.py  test_regression_support.py  test_strategic_orchestrator.py  test_web_api.py
web_interface/: app.py
web_interface/static/css/: style.css
web_interface/static/js/: main.js
web_interface/templates/: index.html
