[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-ml-agent"
version = "1.0.0"
description = "Autonomous ML Agent with LLM-driven strategic planning"
authors = [{name = "Faizan Ahmed", email = "faizan@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=1.7.0",
    "optuna>=3.0.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "streamlit>=1.25.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "joblib>=1.3.0"
]

[project.scripts]
autonomous-ml = "autonomous_ml.cli:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
